modificate impostazioni base APP

--- a/Consultivazione/frmConsuntivazione.resx
+++ b/Consultivazione/frmConsuntivazione.resx
@@ -123,4 +123,130 @@
   <metadata name="TimerConsuntiva.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>181, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAAAAAAAEAIAAxHAAAFgAAAIlQTkcNChoKAAAADUlIRFIAAAEAAAABAAgGAAAAXHKoZgAAAAFv
+        ck5UAc+id5oAABvrSURBVHja7Z0JlFTFucdv78v0bD37DLPvK+MAMzDDAOMAAUb2fVhHA+6CEFxww/hI
+        EEVFkWgiIOCKLOGBJKKYuDw1iQQVFU0UF/CZaMzL8nxqTKxX1dNjEGGmqvtWT93b/++c38nJOTi3q7q+
+        X99bt6o+TUMgEAgEQufIpSyj3EW5G0jjFsoSSjslD8MOoUJcRvmCQkDEOURZQcnEMET0RpyHJFSCTykr
+        KfEYkohIhZfyZySfUnxIacTQREQiRiPhlORzynwMT4TsWIBkU5pzMEQReP6PXv5BGYphioAAopc/UpIx
+        VBEQQPRyK4YqAgKIXtgajUIMV0SvCCDe5iCz/FmAgwkJmaTtNIyJzySNvmSSYHOGIoHbMFwRvSKAEncM
+        OV4zHHDwdvVwcqD0TPJENzxe2kKuyKggcVSsAgJ4B8MVAQEYgOfLW7sVQBeb8wcG7q4EJFCLIYuAABTn
+        cCWfABjXZVaLCOBiDFkEBKD8YwC/AB6nZDk9vAJYhSGLgAAU5/0afgEw2OQgpwC2YMgiIAADcKCMXwDt
+        SXm8Avg5hiwCAjAAIncAs/kFsB9DFgEBQAAIBAQAASAQEAAEgEBAABAAAgEBQAAIBAQAASAQEAAEgEBA
+        ABAAAgEBQAAIBAQAASAQEAAEgIAAIAAIAAEBQAAQAMJk4aPYIQAIAGHecGqdlWO+T9lN+b327WKfH1Fe
+        ozxCWUypp1ghAAgAYdxgSXw35S9aaOfMv0+5Qes8YgoCgAAQBolBlMe1CBemgAAgAETvRhJlI+UrrRcq
+        00AAEACi92IA5ajWi6WpIAAIANE7MUnrLBFNIAAIAAKIrpisQvJDABAAIvIxlfKlpkh1WggAAkBELiop
+        n2kKlaeGACAARGTCRXlZU6w+PQQAASAiEzeGmqSlbh85PyWXrM+pJjsL+5N9xfVkB/3ftdmVZH5SNsly
+        uCEACAChcPSn/Es0OYfFJpE9RQO46tVtzqsllZ5YCAACQCgY+0SSMtZmJ3flVodUuPKK9CJit1iE7i6Q
+        1BAAQl7UiiR/os1BHituCGuAbsmvJS6Llet6zT4/ktrAArBRMoO3mGODr5iAPEZSEgS/ozt4k99rtYWd
+        /F1syOtLLBzXvCajGEltMAF4ggtJWD3xT1SbVY4CvqCsCc7q8wj6Y96/vSqrXNeBuig1v9vr5Tg95M2q
+        FiS1QQTADoBYSPkASagEjwYTvLsYyPv3BtNb8WM6D1Q2J9CRnH3KO4F8l5c8VdqIhDaIAGooryPplKOj
+        BwEs5/1bOwr7SRuwe4vqAyJoiU0i4xLSyE19ysnR6jORzAYRwHjK35FsSvJUDwLYxvN38pxeJBYEcEoB
+        zAnl/TGIGH/sQQCHef7OOck5SCwI4FsCYCfEfI4kU5q/9iCAj3j+zm3ZlUgsCOAbAkilfIgEM7QALLx3
+        bw8X1CGxIIBvCGAdkssUdwBcx3ztKuyPxIIAvhZAQfBdMxLM+ALg+h7vyz8DiQUBfC2A9aEMRmdMLIlN
+        zwU64ElM1UsAx3n+zg+yypBYEMD+rudG7oU+dreX1M25jMzYcpCc/egHQCdGXLdZLwH8iufvTEnMQGJB
+        AAEBNPAmvys2gUy4Yz8SVm0BbOL5O367g7yDhTkQAI0lvAJovXoDklV9AVzA+32uy6mSMliZWFZklpAa
+        T1xgm3Gmw02mJWZiGbCiAriZ5x8n5JQgUY0hgHJeARS4vLovz32jqoX098af8noeq43cm1eLhFZMAA/w
+        /OOyMXOQqMYQAIs3eCVwQUqeboOUbSwaFZfS7fViqAR+XT4YSa2QAB7j+cd9p1+CRDWOAK7hFQDbtXdz
+        nwpdBumStAKua7KzBpHU6ghgP88/rp25GIlqHAGki6zrYMd53RSGBI4JJD+DPSIgqSEAIE8ALH4kuq5j
+        pj+THKkcJjQwXyxvJiN6uO0/mWIXDgWFAIBsAbBj2z4VlUCK3UmWZxSTlyqGdDsgnytrCtzK++gzveg1
+        IAAIAMgXgNAr3pOx0ceCOnqrzmoALM8oCqwcvDy9kN4lZJFyty+s5cxGEAC7E3qmtJHsLhoQOP58e2E/
+        8mTJIHKIivHd6lYIABhCAOz4sKdV28+gogCep3c0q/uUk0mJGSTD4erxINUhPj9ZRoXINlWxY9AgAKCi
+        AFgkibwWjCYBsMR9sKCOnBWfFrjjCbU9uU5P4C7pcOVQCAAoJ4Cu3Z5/gAD+zf35ZwQWQunZLnZnwN6G
+        yDj7EAKAAMIRgBas4/CXaBcAe4afkJAutX1MLHofuAIBQADhCoBFsaZAteDeEgCb0EuyOyPSRrbA6lJ6
+        N3AMAgAKCYCFl7I12gTAqhzzli7Tk4n0bkOPRwIIAALQSwBdMa+35gUiLYAb+5RzlSyTBauFGO7WawgA
+        AtBbACziKNfxniTMwWeqCYBN9tnDmOHXi+mJmRAAUE4AJz4WsHoQ+0I4G5JNLN4fLCZzvkoCYAt32HkE
+        qrz9uDK9CAIASgrgZBm0Uq6gbAiOj19TXqQ8Q9lDuTuY7I0U5wn/7bmqCICt1qtwx+p5EOs/w/07bK3B
+        vuJ6CAAoLYBwQhkBsBOJQkxUlug/DdZgLDpJcKx2RhvlFpEKzCfCTkkKZeUgBGAQ5u06StpW7yTNi2+h
+        fXYpqZlyIamauDBwnsKAjqvI0O/dTsbf/hiZv/tdCEASbIdiKJuUgm9Hcjjb6qZcSPkf0eusDOFEZghA
+        YSbf/TRpWLCC9OnXQuwuD1fnW+12klHTGPjvpm36FQSgIwuSc0gI8xijQ2wzO3vhWZHrpTpcwhuKIAAF
+        Oevm3SR7QCvRwpxltlisJDGvDALQgbeqziQJNodosdXKMNvtDj42cF/37twaCMCojL310cCvt6KVgaJa
+        AGuzK0VfWw7Sqe0e3poMjME+PwRgNDr2HiP9518ZuH1XuDRYVAuAJZZAX16hc/sLKf/Hu1RY5HBUCKCX
+        mXnfIZJZ22yE2oBRKwD2XO3ln/x786QZfr3iet7vUqQuAwTQi0zf/CKJTctRZUEJBHAa9hbVi/TjJZL6
+        IIXyOc9n6EjKhgBUZ8bWQyQuM99I1YGjVgDX87/7Z+/6/RL7YSfP56j2xEIAKtP+4GGSmFtqtPLgUSuA
+        juRs3j48KLkfFvF8jjibHQJQmdxBo1VLfgigGyYnZvD24U8k90Mz11oQzcK9KhACiDDDLl8fbqL+I/hL
+        w94Pb9M6KzC9rsOacgjgNLTGJfP24Q8k90MF7/f5Guc5ghBAJG/9H3iFuOOTQknOryi7KOMovtMMjljK
+        lKAQvoIA9KOJ/xXg9ZL7oZD3+2TLliEAxSgdNSuU5GfHb1cJDpSBlN9CAPowNiGNtw/XS+6HRt7vk/e0
+        IAggQsx66FVic7pFk/8GrfMM/lCCvYsWKeN1DAIIexLwccn9MBeTgAaF7dgTTH69VpOt5rzeDgjg1LDK
+        RZx9+KmkRUBdsYHncxQJ9AMEEImlvnveJ760bJHkv1PHQWOhbOeYY2iGAE7NvXm1It/dREl94NI6Nxj1
+        +BnG00cWCEAhxqzaLjKA3qbE6Dx42N97rpvkv0JTO3pVAKyen8D5f7+Q1Adn846hVVnlEIBK1M5YJCKA
+        GZIGENtaehXlnRNWrbEJxlGa+tHrm4FqvXEi3+EEndvP3vAc573+06WNEIBKZPRt4u24DyiOCCSUJ4zJ
+        xagUwNK0AhEBsGRN17H9G3mvnef0YjuwangSUng77iYNoaQAflveTBxiBUB+082aDZFYLjJ5zM4shAAU
+        Ys72N0UGzVnI9dAFwCr0sMMxZeG2ClcAOkTJDrHNtuAPgtA1S9wxQm0qccdy4+cvfwYBdDF14/MiX2Ah
+        cj10ASjKf1PqQpiv2W3gNkMAXUy4Y79Ix8Uh100ngC4JJAq09y6DtxcC6GLi+gMiHRePXDelABhXc7Y1
+        V9OhWAgEoMojwIbnRDquBrluWgE8xdnWDhO0FQLoYv5/vkdsDu7Jk2nI9VPGfBMkxUucbV1sgrbuhQBO
+        QOD0n7uQ66eMwSZICt69FmNN0NbbIIATyBvcxttxf9Lkbibper2Uqck9u07vsFPeMnhS8O4RYIu0PjRw
+        O9nS8gEQwAnUzV4m0oELJCURW056c1AyXdc6rMlbeqx3sMrCXxo0KdhhnhaBtjJZ/Mugbb29qxEQQJBJ
+        d/1StKSU3m8DEigvd3PNVQaRwHDt33sZjMCXwYRwhdDW8ZrA+n8FYIVLrqVYIYBTkFRYJfq8aNXx9vlx
+        jmuOMIgE2F6JYZTvUhYqzHRKRphtdQWlt0Dxtk461SMlBHDigSDnXCNq1NU6JAuTyD2c19uDuUaEngEB
+        nFQCzO72ikpgi9a5LDTUZ/4dAtf6AEMWAQGoMxnYxaua+J599irpXcHr/BVDFgEBSGTerreJLyUr1EmW
+        Z7TOU2FO91zJlpCep3XuQDNbXQAEBGAOWi7/kR4zrh9Tfh2c3Hue8pEOf1NlAbC1EWwx0KVa5xbZTcE5
+        i0cpmylrKMuCk4MepB4EoDRlbXNRGoxvDuMCyhNa52m7vO1gFXTZUWdLNWMtdoIAogW2PyCzthkCOHUU
+        aJ3vzv+qQ5uYOFi9vkqkIwSgVqGQh18n8X0KIYB/B3u/fznlM03Ogpy1wbsKBASgyKvB+18iqeX9IQBN
+        a9A6C5zKbiN7MzICqQkBqPNm4KfvkKLWKdEsgGmSfvVPBzts43ykJwSgFA0LVhCHxxdtAlik9d6mF/ZI
+        YEWaQgBKrRZkFYQtVls0CGCpAnc9q5CmEIB65wjeeYDkN48lVrsjrAHOqhGnVw1UUQCjNXXOvVuIVIUA
+        lKT9gVdI40WrSM7A7xCXL55rQLtiE0lhyyQy7LI7yayHXiMjrtusmgDYK7m/KfT24wutc5ERAgJQmxlb
+        D5FRKx8OSKF/x/KvGXzJTWT0Dx8h0+/9DenYe+wb/41iAmCHYjwbarJabXaSUlJLikdMJ9WTzyc1Uy8i
+        JSNnkrTK+nDvlo5o8k9iggAggMijmADmh5KgibllpOniG8mcR944bTvn7nyLDP3eHQFBhCiBy5GyEAAE
+        IC/YKUd/FElK9lZk4Hk3kI497wu1ecjStcQd5xcVwP9SspC2EAAEICcuFklIb1J6oKpSyI9LWw4Sf0Gl
+        qARuQNpCABCAnHiFO/n9aWT65hfDX2790Guiy61ZCS87UhcCgAD0jYHcE312Bxl32z7d2j/lJ/9FnDGx
+        IhKYhNSFACAAfWMNbwKymX3dV1kuvF5EAA8idSEACEDfeJ5rDYMvnszd8Xsp269j03N5++EdpC4EAAHo
+        F+xo6895PkPFuHOk9UO/eVeI3AVkIn0hAAggws//bat3qVKleTzSFwKAAPSJiTzXZxWU5+06KrUvPAkp
+        vH1xHtIXAoAA9In5PNdnr+tk90VaZQNWBUIAEECEBbCI5/psCa/svsiuH87bFyuRvhAABKBPLOG5flJh
+        tfS+6NP/TN6+uBHpCwFAAPpEu8a5+k92X/jzK3j74lKkLwQAAegTLVzXt1gCJyLJq8p0lNicLt6+mIb0
+        hQAgAH2ilPf1G9vOK6sfvvMfD4q8BsQBIRAABKBT2Cif8HyGzNrB0vqhYOgEkROCfEhfCAAC0C/4ypTT
+        x4Dxt/9c9z6YtvEFYrXbRYqwIiAACEDHuID39ju5pFb4AJCeyGkYIXL7fx1SFwKAAPSNPpR/8CZh3+mX
+        6Nb+ged+X/RQkL5IXQgAAtA/HhRJRJa44badnYxssVhFkv9JpG2EBdD17KcC7NTZhOxiMnrV9tAOn/jx
+        MyS1rC6wrl2VNgXg+x6+ovxZIp8K/hKTirFnB7byCn8Xe4+TutnfE2l7F59J7oNT8Setc7s0239gj04B
+        KIeFDDj7arFf2hVbe6uij6lhZdRFNgmx+YP8IeOM2t4nKB6zCOBJQw8++usxcf0BrkE3Z/vvOn/1kbBS
+        YHcC3Pv+515u9PauM4sAjhh94GXUNHINuqpJ5yFRJcJe4bEDPns8+Wf3e9wVlBSGTZYmmUEAfzD6wHPS
+        wcS1xlz8+GkgyMjrt/b4PbBjxE3S3jYzCOAjo38RrDAFjwDYxCGSVC6tV2/o8Xs4a80es7R3lhkEcNTo
+        X0RCTjGXAPKa2pCkkpnyk2d7rgPw8OuBNzkmaO9sMwjgWaN/Ec2X3spXznv9ASSpRNKrB3FPAhr4DYDp
+        BLDfyF9CasUAodeAZWPmIlklwGr88fz6d8G2FPtS+0AAEEDo5DaODiwmEV2AwpawsjUESFx9XsP26ddC
+        pt7znPD3wCSQP/gsI6/LiB4BDPb5yfKMYiksTMkV7vwBHcvDWn7aevVG4YE3Kj5VWh80+Xir5FrIqJUP
+        KcGYVdvJjK3hHw7S/uBh0rZ6p7TP2bpiExm8bA03rrhECOBkFqflk+M1w6UwPC5ZKBFr25fosv5++DUb
+        hZahFrq80vrgktR87l9c7J0QY/bON8mkTb/kxpuUBgFEUgAuK/9GkIy+TboOjqoJC4Xk80ZlCwQAAUAA
+        evGL0kH8K80cTjJ3x+/0HSB7jxN3Av8dyMqsUggAAoAA9OK7yTncyVcysl3KAGm65Gbuz9DoS4QAIAAI
+        QC/K3D7ugT972xFpg8TucvMtOrI5IAAIAALQi2Q73+48b2Kq1EGSUlbHt+yYJiAEAAFAADrh4XwVx941
+        yxwkNdMu5vocFgoEAAFAADph5VyQU9Y2V+ogGbJkLfc8wMGKZggAAoAA9MDCmXQ10y6SOkhGXn8ftwCe
+        Lm2EACAACEAP7JwLcUpHzZI6SJoXr+EWwFtVZ0IAEAAEEMk5AHbmnMxBInJaEOYAIAAIQCf8NgffbrP4
+        JKmDJLm4L9fnsOEtAAQAAehHPy//2XAzthyUMkA69h4LrDLk2n7scEEAEAAEoBeL0vL5N+MMmyhlgAw8
+        9wbuz9ASmySnHyAACCAaBfBMaSN38rHtuzMfeEX3X3+nL67X9wJAABBA1O4G9Arsy08prdN1cJSMnMEv
+        IMqRymEQAAQAAejJ5MQMoS255W3z9Fn8s3St0HVrPHHS+gACgACiVgCHyodwLwjqonL8d8MaFI0XriIW
+        wZp09+WfAQFAABCADCrcseIHgpb1I+0PvSo0GObvfjdwDp3otRIl7QKEACAACIDybFmT8F0Ag50vXzx8
+        KmnvYXJw3q63SfXk84nd5QnpAMgNeX0hAAgAApDJtMTMsE6n9fpTSXY9vZsYdw7p37E8kPB5jWOILy1b
+        tP78N+jrjZPe9sU6CGDO9jfJuLU/CxyEOfzajYFDOyff/QwEAAEYQwDvVbeSWMUqxrC9CjJ2/+khAJbo
+        OQ0jiScxNVCYs7v/xuGJIf68clI95Xwyc+tvIQAIQD0BBM4ILBnEvUFINuyR5Me5NRFpN7cAWD2EQaPD
+        LnMek5JFBl2wMqS6ChAABCAV9rxtUUAAl6YVRKzNIgLQE1ZZeejS2yEACEAdATCuySjuVQnM9GdGtL29
+        JYAu4rMKyLSNL0AAEIAaAmCw229bhB8HmHSuTC+KeFt7WwBdb1SGLlsHAUAAagiA8VhxA/FZIzMxyA78
+        jNQzv4oC+HrF49QLIQAIQA0BMN6tbiXt/iypjwRsW/KrFUN7rY0qCYBRPHwaBAABqCGALg6UDCSlvHUE
+        OMlyuKUu8TWqABh1s5dBABCAOgLo4lflg8no+FTiDHFxD5tXGORLJD+njxeqtElFAbBKxMOv3QQBQABq
+        CeBE9hU1kLOTswN3BnE2e0AKlhMm9Bz0/7PFRblOD5memEm2FdYFFhyp1o7FqQUKCkALrDeY/cgRCAAC
+        UFMAp+PNqhZDfd5wBMBEl+/yBkR4T25N4Njy58uayN6ienJtZjEZFptEYgTOXDiZjJpGCAACMJYAjEYo
+        AmCJzx6FXq4YwnWNO3KqArsaQ5HA2Fv2QAAQABJVFpelFwolpN/uIAdKBglf5xhlTlIfYQHEZRVAABAA
+        ElUWm/NruZOR3e4frQ6vOMlt2ZXCr1Unrj8AAUAAQAbsl5nnrUaK3Une0WkS84asUiEBZDeMgAAgACBz
+        /0O3G3eoIF4oG6zrNUfEJfNvjXZ5DLl7EAKAAAzDRal5p7w199nsgVl9va/3u6oWofUUbat3QQAQAJC6
+        0In+yrOJujO88aTJ5ycrMksCy6FlXW+ewKRg5bhzIAAIAJiJlyqG8NdlKKuDACAAYDbY5CLPOPD60yAA
+        CACYjfqYBL6lwU43BAABALPBeyIzq88IAUAAwGTMS8rmFIAVAoAAgNmYkJDOfWwYBAABAJPR18NXIt3h
+        joEAIABgNnjPXfQmpUMAEAAwE48W15v6bAAIAAIwDO/XtAa2Bqc7XIFTit1WK6nyxJKdhf2lXbOB8xUg
+        44xZSyEACADIOv24yBUT0e/giZKBQtuCp285CAFAAEAGwzl25q3LqdJ1CzK70+BNfldcIrYDQwBAyhmG
+        lS1cv8SscOrjJfqcZjw01i90HgArtw4BQABAAmuyKwQqGFnJ7qIBYc0zDI1NEjt/0Golcx55AwKAAIAM
+        lqQVCB8Iel5KrvB1nqTP/Kl2l/CZgDkNI3EmIASARFXtWHBWC2FZemGPZwTuK64n/b3xIZVXs9hspP3+
+        lyEACACJqmphECsl0+EmzT4/mZqYEShv3hafSio8scQTRk0ARt0cY5cIgwAgANMLQBbxBj4OHAKAACCA
+        sMqCuchMA9/6QwAQAAQQ6iOFzU7Grf0ZqgNDABBAtAmAHfox+ofbTJH8EAAEAAGI3PY73eSsNXtMk/wQ
+        AAQAAfC+UszII+33v2Kq5IcAIAAIgON534i7/CAACAACCDPxC4ZOMOwSXwgAAog+AVgsZMyqHSStsp5Y
+        7Y4QEt8SONWnatK5ZO6ut02d+BAABGBKAZw4uNlsfdmYOSSpsIp4ElKIwxMTEAPD5nQRZ0xc4Nm+T78W
+        0nTRKjJ35++jIukhAAggKgQAIAAIAAIAEAAEAAEACAACgAAABAABQAAAAoAAIAAIAAKAACAACAACgAAg
+        AAgAAoAAIAAIAAKAACAACAACgAAgAAgAAoAAIAAIAAKAACAACAACgAAgAAgAAoAAIAAIAAKAACAACMC0
+        AtjJ09gFyTlIVAjAmALYcURIAA6vj1cA48wggHU8jW3y+ZGoEIAhad92mDv5R938sMgRawPMIICreBpr
+        pwPvqdJGJCsEYDhmPPAitwDKxs4REUCWGQQwjrfBZ3jjyVtVZyJhIQDD0LH3OJl879NcyT/0qnUiB61+
+        TLGZQQBeyqe8EqjxxJH9JQ1IWgjANM//Ezc+Seo6lhG7yyPy679JM1Hs0kRqxwVFwOrQz/JnAR2opv3J
+        2/+lo2YDLmaRgpZxJH/Y2NOSNWAYccf7Q6mrMN5MAhilKVaaGgCFeZfi0kwWT+CLBSB63v+fHOyVxj/x
+        5QLQLQcpVs2ksQxfMACn5c+UYs3kcS++aAC+xZeUEVoUhJNyD75wAL7mb2ZZ9isSi4LWwwAA0cxRSpUW
+        pcEavheDAEQhf6esoPg0hDaEsoXyCQYGMDmHKd+npCHtvx12yjDKBcFOYsshtwHd2UN5Objg5C3KC5Tt
+        6Bcp3EFZTplLKUSKIxCIqIn/B4cpgyj5ztQyAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
