Bug Fix: - Impostare un controllo sulla lunghezza della nota Altro (26/09/2022) - Aggiustare la modifica della nota singola (26/09/2022) - Impostare la nota Home a tutte (26/09/2022) - Aggiustare il calcolo del tempo extra sulla divisione per cliente (26/09/2022) - Correggere l’inserimento del tempo ticket = a “1.1.”(26/09/2022) - Inserire la possibilità di mettere la nota extra anche con meno di 8 ore (26/09/2022)
Release:
- Calcolo tempo extra nel dettaglio (26/09/2022)
- Tasto impostazioni (29/09/2022)
- Aggiungere la possibilità di spostare il DB (da impostazioni) (29/09/2022)

--- a/Consultivazione/frmImpostazioni.resx
+++ b/Consultivazione/frmImpostazioni.resx
@@ -117,204 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="TimerVisualizzazione.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>145, 18</value>
+  <metadata name="ofdPath.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="lblFiltri.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAABLSURBVDhPY6AWYARiQSBWIBKD1IL0wAFIYBEQPwLihwQw
-        SA1ILUgPHFBsAMVeoBiATBMCYmy2YcMYLqA4DCg2YDQQqWDAQAUiAwMA29VFh7wsSaUAAAAASUVORK5C
-        YII=
-</value>
-  </data>
-  <metadata name="TimerConsuntiva.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>16, 53</value>
-  </metadata>
-  <metadata name="ofdFile.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>328, 18</value>
-  </metadata>
-  <data name="imgImpostazioni.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAPGSURBVFhH1ZdNa5NBEMd7kh5LryIepB9ApCh+ChE9WBTR
-        T6D4BSopbap9gRZKxSRN9VDo27HHVjCxt9KXa9/MSaFvCdLShHadX9x52GezSVqogg/82d2Z2ZnJzOzs
-        psUYcylks9nPpVLpXOaxD9rExMQnmQb31UOQ2AgYWl9f/zU/P7/sAlqxWMSx4L56CBJBX19fZyqV+tjf
-        33/P45np6ekvHq3F0vgiWjKZvI8O0XXHpbsIEgcHB58eHh5Ww8yvGh4efunwL+QAe2xEzMHBwfnQ0FCX
-        8lzUENR4oVCojIyMvNrZ2SmjKJPJZBcXF7+LjEmn0yl3DxB+WkaDDLLs2d3dLY+Ojr5GFzrR7e4BsQVe
-        qnHCB41UbG1tncrcHB0dnc/Ozua7u7uv6R6F0Frn5ua+ISNrwx72wiON9ZyIJggTKte4QpS3DQwMPJGx
-        3aWHgIyVbXPp6gQ21DEQCVAsMhoJ+xulXTVIqYyk8IPSIiYeat5cD68KovP29vZ2mRT19vbeVXpMSCuX
-        /Pkh9NHT03ODfALmIRkFujY3N0/R7Z2ouAOACpbRSEE+d+kKMfg4n8//rFQqsvzzMRfaD8n9I1nW7LG6
-        jNUd48UWgGNEmEIFNz4+/v7k5MTs7e2dzczMfB0bG3sLmO/v75/BE5l3/j50cQLsMY7xgr2doyZDTJBf
-        joGVlZViIpG45fOF1gEPGYnEQ59vdUaf3h01vZ3TIB7XnHPCzi8PGVfgBJEgHT5PdLZKCjJqZ2Njo3p3
-        wAy2VhdSZDfJM6EO8V3IL82Vy2XTrDC1dbNo6oDtXoZ8u/QQRCYhI0Uc7P2K/8sBwklYL5mC6yG+InKA
-        IlxdXS1NTU0tAG46CsYVBhSWLcIOn6fQIszlcvWKMK12sFktQo4CExGKPm41GWIKaDLOMaxxAhq84+Nj
-        juEDny86l2WMPmyKQ5MxIUCzoGnQPHweTQYn+JWEmnwDzjg0jItM0t+HLprb0tJSwefFFsC2SyM9+5lL
-        V9BkSAd51o85YQ/9cmD7f/NWrJcRF4d43fQyotJBs4IjAlxw6K57Gel1zBPsL13HnVz12HAfupHAP3qQ
-        oDv8IMHDBk+ydgn1i1Bh+rCyXX4K0ek8yaJneiQA6HihR6m8ZKJHKUdUlNf0CWj1HqVqHN04p3tATAlw
-        neBJrXmjgu0xqvcsz8gYe5ZTT7wD1bht6bF9sYUCLwmVzK/sj0nIOKghKAgfxeJWrMWFHADsRYebcx9B
-        YiP4d4dibW2t2ttDexohSGyE0N3BB01yPynT4L4wTMtvJV/cpSbmw5AAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="imgDocumentazione.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACQAAAAkCAYAAADhAJiYAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EgAACxIB0t1+/AAAAAd0SU1FB+YHGRUwO+dYKHYAAARtSURBVFhHtZj5S1xXFMfvVKQ22FawLfmlVUgI
-        hPxakFJIpMYEbSpt8h8UwSX4Q4XaH4yNoEXcd1EQ93XcddytC4q7ZqojOuPuRNxRrHVGO0u+5zkDA8Y4
-        793xwBfHWc75vHPuOfe+x6zW19fHOjo6vltfX98zc9rR0dFbhULxM16y8PBwlpiYaIkiwlZXV9nS0pLP
-        4eGhYX9//7/FxUWVRqP5R4SUGxsbm2dnZyaj0Wje3t5Wtra2/kC+k5OTWVJSkhDHbltbW2PLy8s+uDrj
-        9PS0Mjs72ystLe2+vYqPj7/b3t7+18HBgeH09NQAMIJSNTU1ecO9LCIiQhyUFQgZMk5MTAxnZGR8WlJS
-        woqKiuxSY2Mj6+zsfLmzs2OYnZ19Mzc3J9fr9Wb8P4dM+SKEOChboMnJyZGcnBy3hoYGy6fXG2BIYQAw
-        o3zN+P0dgqJM4b1ZQD3B12SpqamMdK05EkitVitaWlpYenq6J6AqKVO7u7vzKN9TfFUWGRnJUlJSLn54
-        lTkYqIXew5qiwN+oVKoyC5S6ra3tR3x0PdRNAIWEhLDi4mKWmZnpgUyVWjOF8glQVLoroW4CiAzdKkAh
-        8NfIVLkFSoPy+eFjGbqT5eXlXXzZ1hwB1NXVJQAtLCw00VC0ymQyMUCw0NDQr2ZmZvJ1Ot3/e3t7GpT0
-        BbL4cVxcnMWLjfECYcqTwhDIiFmmAUj0e/QnwApPTk6O8Jq6T4uZ9y0yZ/FiY7xAZWVlJD8EXD4/PzdR
-        u39ABpiJygd43+PjY4sXG+MFov0qISHBuba29hGG5Cvo9VXC+olDWbW0K6ysrPhg/7R4sTFeoNzcXEGo
-        xLXCfHKjGBSLYlLsS8YLZK+RT/ItGaiyspKVlpZSB7Hx8XE2NjYmWsPDw6y6upoFBwfzA1VVVdFivd3d
-        3R0KoD+kaGRk5He5XO6NtnciMMlANTU1Qs3Rls+2trb0aGmzFKHzzKOjo3/jwj5rbm6WDlRfX896enoY
-        uuJef39/HtIvh6rFCjBV6K5fY2JinJEpvpKRWbuDx+j3OCfxryFcFYuOjqYZIxxFpYrmFE6W/EBWCwgI
-        cEWXfBkUFPSFWAUGBrrDxUdZWVl8QHV1dUKqsSE+wE1AISZqA1QvVjj81w4NDf2GwenCBYRtQADCccIP
-        +82/2H/0kE6K0P49OIp8zl0ydAl12i102vcYA8+hX8QKF/YT5EE3A9xAlCGkXfjLIzpi4OTID1RRUSGc
-        +Hi3Dpr4WOD8QLSDoztcUTIvLEzvwcHBR2KFofoQ5fL09/eXcQ1G66Kempp6jM93Njc3dVKk1WpPcTE1
-        BQUFrpjY0oGo7en9gYEBL6VSOYY7BzW0IFZYP/PYnBOR6U/Ip2QgKllsbCyLiopyys/Pp//dsb+JFjLt
-        jmntQnG4gcrLyxnd4ysUCoa1IDy2Eave3l7Bj+TzkJSHDfaKfJJvimEXkNTHMWJEvikGxboSyAEPrOwW
-        +aYYFItiUuxLRrV21CM9e41iUUyKfWGMvQNEbUlJlSWm6QAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="imgTema.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACQAAAAkCAYAAADhAJiYAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAAsSAAALEgHS3X78AAAAB3RJ
-        TUUH5gcZFTA751godgAABwpJREFUWEfdV2lMVFcYvTUpXVRMWq1dkhajf/xhJTVS1PqnaQKmuKQkEG1E
-        ccFgokYJBgWsKAoCYQsiboBIgbJEFkUYKEUWgYFBcUWFCLKIGwgiwgAzPef6npmQVkfbMWm/5GXmDffe
-        d9455zv3Iv63FRwcLEJCQoTRaJRXZ2enWL58ufz9rdf+/fvF+vXrJZDc3Fy7qqqqoMTExC+7urrE0qVL
-        JdC3VgSzbt06CebMmTPzOjo66p8+fWpsbm7OOHHixLS7d++KVatWKaMtXEFBQVISgjl9+rR9e3t77fDw
-        MG6NxsHBQYLKio+Pt7l//74EZVGmCGbt2rUSTHZ29ty2tjadCkatoaEhY1NTUwZB0VPOzs6WAWUKBjJ9
-        CzB1IyMjz1GMKYIiUxaTz1QmgLEDGO1YZgwGg1Gv1xtHR0flPeUDU1nHjx//iqD+te7jIhs2bJBgcnJy
-        vgEY6RmyQxD83tfX13Px4sVf79y5swwgKkw9devWrXSCgteEk5PTPwPFyZ6enhJMfn6+PcEQCDqqDw8u
-        wWfh1atX08Caw+7du8dzXE1NTSolU0thKhORYENQZOqNiq1tItMCtLb0zMDAgB4Pjfb395+UlpYmx3JM
-        XFwcpbVGDv2hyqaWCopMMadWrFjxekzRM2vWrFFlmos306kGxuKGS5cuJQQGBk4BULFkyRIBdkRqaqoA
-        wMXd3d1dcuCYUkDJ7oO05stHMO7u7hKMkjOSGcjz5N69e838jsX1V65ciQOLU/EAcejQIdHa2irwQF8G
-        5N+VylRCQoKNavRXlioTPMNuqqFB6RlsDYGHDx/+Dg/WKKCGASo2LCzsU0ghcC8ePXr0CzuNBaMPQ+Z+
-        3BvkD0qpTHGbYU69srKyshhk42tra38jGFz68vLyMF9fX+uysjKRlJQ0u6WlpcgUFJnCC4iCgoIFlZWV
-        OZgbdf369R81Go3jtWvXtAqWF0UWuffhq/LUl9SRI0fkJya49fb2DgCQoaKiIoKT3dzcBBYTeLtZAGXK
-        FOX7hPP27ds3wcXF5T2Oh/QfnD9/Pp8g1OIc7n3ckHErn/XSKi0tJQvsssnIkEyy9ODBg0ak7hwAEV5e
-        XgK/qaAK+XeCunz5MuX7jGPoqQsXLggwOwVjmp9DeQFGh2aYj1vztxTmRVFREX3k+vjx4x5SDBZ84Aux
-        d+9esXXrVsH2BchZt2/ffiEfQanynTt3jvNnI5O6VTDs1rNnz0owGzduNL/12cZ79uzhZY1uKGEiw8xZ
-        mzZtmhwdHS3Cw8PF5s2bxbNnz/5SPkbCjh07rCFXCD1IFtEgOm7IBMOwNRsMzCjYyhkZGQy76Tdv3qwm
-        IMhXBX9MR6fJcREREcLb21uAARWUypQeORXP8ESIPlHAaBkhBHPgwAF5mVWhoaEiMjJStv2pU6fmNjY2
-        /o62HeZWAEAxrq6uH0ZFRRGAND/kEdu2bZNGZ/eZRIKBic7v3G64IXNNHuo4x6yiERmKjo6OVmjvZVi8
-        iVtAf3+/4caNG6nJyckz0Bk8SowH6JlgywbT3snMzBRbtmwRjATmFMMTD5eeIRgk/RyC4dGF67+y6Jdd
-        u3aJlJQUERAQMAnt7o2A66JM2AZ66+rqQsDGRw8fPhQEBQljcTXgvFMGQwcDkANOA1bMKYYn2HpCMNz7
-        YGopE/1iFhjSt2jRIvnfAiifqtVqj3JBgkGrt6DTPH18fN7nPgU/fQym0igfmePFVAboDsxLRFZFYm4f
-        f2fOcEMmGB5dzAJD1CtXrlT3rJk4RhRQez5ECa4fJk6cOI4GJygwFUr5YNIRpG854j8PkdDG8TQuLpZs
-        bcgkPfNa3aQOxJvYwy+VXBiAjJBDk5eXZ8sFY2JiBEGRKcrHt4fRS+CVGXZ2duMg1/cAlwhgfZzPvU/t
-        Jq5vNhgWd1u09jSA0SqdMaTT6ZJwhPicKcviwmSK8ilZ1MQsoZEXLlwojxzbt2+3xv71MxjMhGckMzy6
-        mN1NanEi0jScrECKQYRYLDrFCRlij/CbUF9fL8gU5SMYGp3dx3k4Psg12PrHjh2T3xEH8sTIo4tZnhlb
-        q1evFvjfqUB580Jky0+470Tb9jQ0NNjj7b+gfJSCZkUHeTk4OFgxpyCbsooQMLPg8QPMycB7IzAs7jUI
-        ryK8lREgjqLmY3dvxvdObLBOlI/s4Rqtrq6O9fPzs0b2yPC0WGEzzKB/0PatSGYXgJoHOZwpHz3FFoeE
-        uWBg8smTJ8XBgweVmRYo6g3DOrN7KBtAtZApyKehpygVwq8EXTOdJt+5c6cy00JVXFxMza1wuvOHYXvI
-        FNuan9jFR+CfUhwVvubmyWKiW7yY0MiKd8HUYngmBabWMPBwFPVLT0+fShZtbW15ClRmWLDUbigsLJTy
-        sTw8POQn7+EvCeS18+S/X0L8CcuMgVPdOKqlAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="imgTicketMassivi.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACQAAAAkCAYAAADhAJiYAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAAsSAAALEgHS3X78AAAAB3RJ
-        TUUH5gcZFTA751godgAACVNJREFUWEe1VwlQlOcZ/jxAMZqaZiAztc04TSfNxEknybRNJtN02qng2JQc
-        NRmRaQStoxN0CrFCOFQQEzMRFAWiorAcBthd7mu53GVhWY7lvhHkWtnlFKXSXZFlt8/78f+KNqlJB96Z
-        f2D3//7ve/7ned5j2VJGUFAQs9lsLD0t7fWber12ZmbG1tTYlJOenr4pOzub5ebkCCuXOS5evMiOHz/O
-        wUil0ldGRkZKrVYrPtpsZrPZ0tLSkpx89epzBfn5fM2yBoHx9/cXwfxKBGOxWGanp6fH79+/bwWouTqd
-        7lJUVJRDbm6u8OQyBTFjtVhYWlraqwCjJDD37t0z64f0QddKSl/oud6TRUwB3IjRYHCcmJgQnlziuHDh
-        Ajt69OgCM6mpBEYlgLmn1+sDQ0NDHejeiMGwkwDdnpoawfeOoyMjwg5LGDGQKRAyzZpMC2CMRpGZ2aGh
-        oaM+Pj5rU1JS2PZt2+wb6utPE6D29vYmmPuZMlWZsMsSRmhICGcmTS5/7XGZfH18Haq11ez8+fPMyclp
-        dXNz8zEChGyrSZDEbyzILxB2WYK4HBPDPj95koORSaWvgRm1KBOY8Q8JCVmblp7G77e1tvK/AOw6Oztr
-        g3cMKpVqs8FgYFeTkhiyjiH7mNFoZGR0WvuDgsAEC6kNMK9jozIOxmwmMIGfeHmtgbFZR0cH6+7qYhXl
-        5etUSuV+HPb2zZs3W+bn523Dw8NxSqVy06fe3g6f+fqu02q1zw4ODjpGR0c7ZGdlsYz0dOG07xHEDM6n
-        ovdrvHX5Q5mG/A8CTG1tLQfb0tzM6uvqnsL3X2OdoaSkZLOuVuc+OTl5xzJvsYGhvrq6OgnKQNLgwEDv
-        FMyu0+kuxkskTqnw3RPjSswV9uXnXwrMyAhMhSgTqrEfZFqTmZnJ7wMIO3/unD1AhUEiy9jY2HRNdfXf
-        ONCWFk8wpEd9wsdHw2wy3W9saIiLi419Tjj22+Py5css9EQoP0wulf8GMi0G479//357AkMZVVJczJob
-        G9fh4LDioqL4js7OHTdu3FBAzrEqrdYd261Qq9Wv4rvdYDO2TlcXDeD+AN1Me6J4zoK1hIWTvyNOnTrF
-        wcAbbwBMpQDGBE/4HgAYpDSbn5tjWdD/7/v22ff09JyFJ0YLFYpDkGIzTOzY29tb2NTUpMPbv1hUWMj3
-        8/rEy8Fz9+61OGIlXmALqvkkMWUymeYXTn4sYsHMVwIYmUz2WxEM3sIM2o9AJnsxM/LRn8pUqnU52dkf
-        9/f352LtFIANwtyH0WyfLSgo+DlY/CAqMvLpmEuXGNoHi70Syw3s6uq6Ei93aG5uzkyAjAbjuADhYZBM
-        J0MFmWSyN1DuNSIYPOzn6elpR2AyMjII7AKovPx3R0dH5a2trVvQImrAzpRGo8kGW3nwEmpPPotCXSJA
-        tL69s5OOWoHKfejfCA7GaNSXlpR+zEEsDi7T/Dxl05tYVEWLCQwe9t27d68d6GemmRlGaQpgG/D5HXWZ
-        2uvOnTv1yBKX4uLil8bHx5UT4+OTyKYTEWfPrhHHDjDLvYZYAW95A4uJgzEYhkpLSj7Ev3wdj8UyyaVS
-        8oxW8Awx4xscHMyzyQLPKOiNz52zQ6puGxgYKIYx+7E51aN+pHd0Z0fHScjoFnb69IakxES+J10oAWzX
-        rl0rse4QZiUOBmVAj+930H1U/odgvhBlIjAGg2hg8ozfnj177AhMWFgY9S66NiDLonElQJo3IZPuXwhk
-        jaS+vj5bee3aPmQUOxsezgsq7Qs56Shi5oFMBEZkhuR/ECIzGYJMgmdMZGACQzLZrFYWDUPiMKarrT2I
-        zSa6urreoucaGhpeuHXrViXahTQoIOD5bc7Oq1RKNd+bZCotLaV/yTP/WMTMIOTjzKTiJcmXPMJPhy0w
-        I5MtBkMyPZJNFRUVBMgB1y8aGxv9wOI02sBWugcgbjjUV1NRseNYYKDDhehopqnU8uewhrm7u68UDPzA
-        MyIYtKFHR1v6EmDewiJuYNQCkumwh4fH6ry8PH4f2UIbrwU4j76+vnqAOwHTqqkNoG8V4tl+ZNpHVJeC
-        jx1j0ZGR/Dlqntu3b1+F/byxrygTmBFkApj/CtSDP2JRLTGDh0x4Ex9nUA4W+KZgjdjZACBfg4U4eKFk
-        ENUX/ecLGFoOqVToVYfDvgpzEEeLiIgIhvrDXFxcVoHpw/SSApj+QkXhB7RvSnLKtw/9QN8qgDHDcD4B
-        AQGrC4WKis8M1XY9Noq5e/euDV7ylkgkP+3u7s4Ba2NI8ffLy8r4Wk1FJf9Ll0KhYMhKO4D5dBGYAVTw
-        9+l+anIqyka2gOCxgF1ovQ2HqD/z81vf1tZG36GzW9nt27dZXm6eC5ioAXAtPrcie36H6vwz9COJXCb3
-        oAPEoP9JJjc3t9UCM6KBB4qKiv5K95O/+UZY/R0BAKUAYAUDlDUeGDX/gH22ApDz2Ojon9Jk8i1tLS1P
-        Q++XUI0VqLzXwdrbQf4B9hHhEfZSaTLfh2QiZmBgAnOEEkMAcwPfv0dgaDDLQvn4n0Fv29nZmUnPIyXn
-        Udhm0VuQ5VYbssIKT2lgaE41fuz9srenJwbmfQ+pz+KuxDFt1YJUokyUEIvA9MNLHAwx80QwFFQ9Aeon
-        7W1t6ei6E6hvo2iMrWCuCRKNEzCMqiPqsrKPaGO3nTufOnjggD0u/jx9R3WK2gqY+SewLMg0PNwHkPxF
-        iJnvHaCflZeXk+PXgxEnDGCOGCd+jJFjI3R/BW+ZSaBg8AZk5IvUpSMhD11nzpzhBU0A47eImR401HcJ
-        TEJ8/A8bTcWo1Gi4memHHJX9a6jIGM4ZZpiXkdqj8JUVTXMrJOUthA4jMFQ8IdMRajMCmF6kvyvdT0pI
-        oCYtnLAEkY/CGBcX96OmxkYtDenwljMuDoaKIA1pYMaXhjYRjKJAwZlJTEgUdlnCoDkGk95GeERLDIG9
-        rWCLUaOl8ZXGWPrVIYDpRmX/C4GJl8SDmf9DpicFMoxhBHWETAZUbFNVVdXva2pqKJvW0IAPZkQwPQDz
-        DoFJXGqZFgfKAMNo4YRzJ1CnLAC3Kzws/BkA9V/kmevI0gVmYOBlDTBCPWk96lQWkQFQkwDVDLM/kAnG
-        /jOBiY2NZXJxwFrOqK6upk6/CYN7rqAQD8EzXCYY/9EBazkDP3f5LARQz6OtKGnYg2TXwQxPbTRbYeVS
-        BGP/AXDZ6dMck1JaAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="imgCommesseMassive.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACQAAAAkCAYAAADhAJiYAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAAsSAAALEgHS3X78AAAAB3RJ
-        TUUH5gcZFTA751godgAABkRJREFUWEfVWFlMVFcYPkYaScZipZ1J29SkL41tbOWh7fDUhqQmtIm8tE2M
-        SdMoKRKerCIkImRQWQw7QkASNI2CC1YQQfagYggiYjGyKIpsAjMssu/L9PsO9+rIMowwbeKX/Llnzv3P
-        uf/5l+8/IN4qBAcHiytXroi4uDiRlZUlGhoaxPDwsDCZTOL27dvi9OnT4siRI1Lvf4HZbBbnz5+Xz5Mn
-        Tzrdv39fOzAwoGtvb9fm5OS8v3v37g11dXUiIiJCnDp1Sln1H4AnvnPnjsjNzRUJCQkfVVZW/n7v3r1i
-        GNI+Pj5u6u/vN8Jb9dCJLSoq0ru5ub2TlJQkrl69quxgR6SkpAiDwSDu3r0rMjMzv6mvr89BmKbgpUWY
-        np42d3Z2tt66detQVFSU44ULF+zvKT8/P/Ho0SNx+fLl7Y8fP66cmZmRH+dzampqbG5urhfjgcnJyVn5
-        Anjx4sXIzZs3A7y8vBy43q45lZ+fLxITEzUPHjzIUI1BmMZhZEF2drYnwvQZQvndjRs3Yvv6+ppUnd7e
-        XuP169c9iouLZc7ZDdwMH/5xcHBwgB+CV6ZqampiT5w4oUUuyffKB9dBz727u7uWegzfkydP0g4cOPBe
-        cnKy3Msu4MdQ0qmwg98xwzM1yItP0tPTBfJE6kRHR4uAgACpi1AdgvGT1G1paekCPegLCgqknl2g1+tF
-        R0dHvhoKlHogpteTiyxBozgHOtg2NDRUR11QwkxTU9MPMEzReh2sRAo8KUX9bRXMgdHR0SIkrzQIJPgr
-        HuL48eOKxiscO3ZMhISEvAtvllEXiT4Hb+0geS4FxYBPYcyfFI5XNGg5D8XHx88rKIiJiRGcg4e+hBE2
-        eYheefr06X541EzhmHNWgX1fyyGUfg24aQtziGEi+GTLoC44yE/Noebm5k5wl56VuhTgdcpR6hIcc84q
-        oEfGdV9QZXFoDzqyN99TAFbZT6gy6R2LKtvEKmMo9u3bJ8Dksv+p6yAG6ivgWM5Th7qLkJeXx3ahgREX
-        F/BQIQz4o6KiYiv45ntUVzx46Jmq09PT0wV+2skKwxmkMURaWpoGh9NCRQfZBImgvgKOOaejDnQ3ykWW
-        OHjwoEC7EJcuXfoK4apQP8gnPrQsU4MoD+/du9fB19dXMjVPizBrkIN/sf9BTZURrlHAsZyHjhG6WYoZ
-        r8BeFBQURH7h1eNrGJeNBLTWy1qQR76RkZGOvBmopNjV1SVaW1u1MNaoqK8I6C6dUDxhSUmJwBWDXPMh
-        GPo3dPsii27fBUPZ7aMLCwu/dXV1dUC7kXcmFXbzkCWgyByQT5S4U3V19cv7EPLJedeuXRuQayI8PHwR
-        wa05h+gVvJAhw6npbpmcnINHBPhFIHEFckeMjIyItrY2qTM7Oyt1YKjACekVERYWJq8xq64yLvb395eG
-        aDSa9efOndvc2NionZiY4KlWFCS6Dt1eh1z6IDAwUIM5ebCFdyNyDrkH7yU45txroGfQyaWVGRkZnyNf
-        /HH1qAK/dCJpLWNvVeA1E7zYhPUXy8vL3dF8nc6cOSNAES/vRzYxNePv4uKyDvzzC5j2H3hlvomtEjix
-        Gfw0gCJIPHv27Me8Bvv4+MhvMc/Yv2DE8r0Me5AMf37+/Hn7/JaSnVnSQ9i8Gz+X9MhCQS71Ib8m8cRP
-        s3lsbGwGRZCOXreZ1UovKQZZ7/YI0zZ4ppqb8HRIrp6qqqp0tA8PNMktmFYrZFmBEbrS0tLt6GGHUYFV
-        PBABoybBZ4cxlAe3CYj5UYRJHovGlJWV+Xh6ejrW1tbKTd5UUlNTv8AB8+kpHhAEWQOy3GrzLRIJ/Awb
-        yTDRM3v27HHkXx1qZ38ToLEKXj2uXbu2AwzOcJN9J9DfvG2+RaKaprmQOQOm9aBn1Kvqm4KH4B0JSeyM
-        0P3NfRE2M/gqiJxlE9iPCLi3R8kZ5c3qwJsl90B+h3Ffhg7eN5BkbQIXKWC1MIGVN6tDaGiowG2A+1oy
-        cjBE0VgB8/oSNIhVo7xZPbgHhEaosN0gxFgSIZ4m9CMte8pawT0gBt6hKBzbvC9bPv95wGsCepiG/Wyt
-        4B6QnSDbBgrHNu+LS9VGdG4tnhr+Vq8NawH38Pb2dnj48KEzhWOb9+XfYUajUT65aBGVrwI2tYi3A0L8
-        C7BmFgc8fbtiAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <metadata name="TimerSlide.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>20, 19</value>
-  </metadata>
-  <data name="lblSlide.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAACOSURBVFhH7ZRBCsAgDAT78Bb6CH2i+gnBJsfgHut4URhM
-        BkmCh1xjjK1ISSIliZQkk8g5v621bvGvp9barfZjYegXEscf2r3klFK8dugXEmf7AP5NK4bw5iml28LQ
-        LyQ7kJJEShIpSaQkkZJkEmcTnk1IIyWJlCRSkkhJIiXJJM4mPJuQRkoSKUmk5BjXB+G19zC6QL9JAAAA
-        AElFTkSuQmCC
-</value>
-  </data>
-  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>88</value>
-  </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAAAAAAAEAIAAxHAAAFgAAAIlQTkcNChoKAAAADUlIRFIAAAEAAAABAAgGAAAAXHKoZgAAAAFv
