--- a/Consultivazione/My Project/Resources.resx
+++ b/Consultivazione/My Project/Resources.resx
@@ -118,35 +118,17 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="menuChiuso_16x16_nero" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Immagini\menuChiuso_16x16_nero.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="documentazione_32x32_nero" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Immagini\documentazione_32x32_nero.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="ticket_32x32_nero" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Immagini\ticket_32x32_nero.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="documentazione_32x32_bianco" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Immagini\documentazione_32x32_bianco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="menuChiuso_32x32_nero" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Immagini\menuChiuso_32x32_nero.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="commesse_32x32_bianco" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Immagini\commesse_32x32_bianco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="commesse_32x32_nero" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Immagini\commesse_32x32_nero.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="menuAperto_32x32_nero" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Immagini\menuAperto_32x32_nero.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="ticket_25x25_nero" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\..\..\..\Consuntivazione\Consuntivazione\Consultivazione\Immagini\ticket_25x25_nero.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ticket_32x32_bianco" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Immagini\ticket_32x32_bianco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="pennello_32x32_bianco" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Immagini\pennello_32x32_bianco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="report_25x25_nero" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\..\..\..\Consuntivazione\Consuntivazione\Consultivazione\Immagini\report_25x25_nero.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="pennello_32x32_nero" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Immagini\pennello_32x32_nero.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -157,13 +139,88 @@
   <data name="menuChiuso_16x16_bianco" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Immagini\menuChiuso_16x16_bianco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="impostazioni_25x25_bianco" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\..\..\..\Consuntivazione\Consuntivazione\Consultivazione\Immagini\impostazioni_25x25_bianco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="report_25x25_binaco" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\..\..\..\Consuntivazione\Consuntivazione\Consultivazione\Immagini\report_25x25_binaco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pennello_25x25_bianco" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\..\..\..\Consuntivazione\Consuntivazione\Consultivazione\Immagini\pennello_25x25_bianco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="menuChiuso_32x32_nero" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Immagini\menuChiuso_32x32_nero.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="impostazioni_25x25_nero" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\..\..\..\Consuntivazione\Consuntivazione\Consultivazione\Immagini\impostazioni_25x25_nero.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ticket_25x25_bianco" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\..\..\..\Consuntivazione\Consuntivazione\Consultivazione\Immagini\ticket_25x25_bianco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="report_32x32_nero" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Immagini\report_32x32_nero.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="menuChiuso_32x32_bianco" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Immagini\menuChiuso_32x32_bianco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="documentazione_25x25_nero" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\..\..\..\Consuntivazione\Consuntivazione\Consultivazione\Immagini\documentazione_25x25_nero.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pennello_32x32_bianco" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Immagini\pennello_32x32_bianco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="OreExtra" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Immagini\OreExtra.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ticket" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Immagini\ticket.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="menuAperto_32x32_nero" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Immagini\menuAperto_32x32_nero.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="report_32x32_binaco" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Immagini\report_32x32_binaco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="user" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Immagini\user.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="impostazioni_32x32_bianco" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Immagini\impostazioni_32x32_bianco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="commesse_25x25_bianco" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\..\..\..\Consuntivazione\Consuntivazione\Consultivazione\Immagini\commesse_25x25_bianco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="impostazioni_32x32_nero" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Immagini\impostazioni_32x32_nero.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="OreLavorate" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Immagini\OreLavorate.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="documentazione_25x25_bianco" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\..\..\..\Consuntivazione\Consuntivazione\Consultivazione\Immagini\documentazione_25x25_bianco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="commesse_25x25_nero" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\..\..\..\Consuntivazione\Consuntivazione\Consultivazione\Immagini\commesse_25x25_nero.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="commesse_32x32_nero" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Immagini\commesse_32x32_nero.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pennello_25x25_nero" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\..\..\..\Consuntivazione\Consuntivazione\Consultivazione\Immagini\pennello_25x25_nero.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="commesse_32x32_bianco" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Immagini\commesse_32x32_bianco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="documentazione_32x32_bianco" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Immagini\documentazione_32x32_bianco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="documentazione_32x32_nero" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Immagini\documentazione_32x32_nero.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="menuChiuso_16x16_nero" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Immagini\menuChiuso_16x16_nero.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="edit_16x16_nero" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>D:\Download\edit_16x16_nero.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
